# mm-summary

./: .gitignore  README.md  aggregation.py  excel_rendering.py  mm_summary.py  models.py  moneymoney.py  pyproject.toml  sample_data.py  user_config.py
