[project]
name = "mm-summary"
version = "0.1.0"
description = "Generate a yearly Excel summary from MoneyMoney transactions."
readme = "README.md"
authors = [{ name = "Florentin Putz" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["moneymoney", "excel", "finance", "reporting"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "openpyxl==3.1.3",
]

[tool.uv]
package = false
